Register and authentication form added

--- a/shop/djangoShop/templates/djangoShop/cart.html
+++ b/shop/djangoShop/templates/djangoShop/cart.html
@@ -30,6 +30,7 @@
         <b>Общая сума</b> {{full_price}}
     </div>
     <a href="{% url 'cleancart-url' %}" class="btn btn-primary">Очистить корзину</a>
+    <a href="{% url 'order-form-url' %}" class="btn btn-primary">Оформить заказ</a>
   </div>
 
 </div>
