--- a/shop/auth_app/templates/auth_app/signup.html
+++ b/shop/auth_app/templates/auth_app/signup.html
@@ -5,7 +5,18 @@
   <h2>Регистрация</h2>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% for field in form %}
+      <p>
+        {{ field.label_tag }}<br>
+        {{ field }}
+        {% if field.help_text %}
+          <span>{{ field.help_text }}</span>
+        {% endif %}
+        {% for error in field.errors %}
+          <p>{{ error }}</p>
+        {% endfor %}
+      </p>
+    {% endfor %}
     <button type="submit">Отправить</button>
   </form>
 {% endblock %}
