--- a/shop/djangoShop/templates/djangoShop/index.html
+++ b/shop/djangoShop/templates/djangoShop/index.html
@@ -16,7 +16,17 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{% url 'main-url'%}">Главная</a>
+
+        {% if user.is_authenticated %}
         <a class="navbar-brand" href="{% url 'cart-url'%}">Корзина</a>
+        <a class="navbar-brand" href="{% url 'logout-url'%}">Выход</a>
+        {% else %}
+
+        <a class="navbar-brand" href="{% url 'login-url'%}">Авторизация</a>
+        <a class="navbar-brand" href="{% url 'register-url'%}">Регистрация</a>
+        {% endif %}
+
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
