--- a/shop/djangoShop/templates/djangoShop/form.html
+++ b/shop/djangoShop/templates/djangoShop/form.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'djangoShop/index.html'%}
+
+
+
+{% block content %}
+  <h2>Оформление заказа</h2>
+  <form method="post">
+    {% csrf_token %}
+    {% for field in form %}
+      <p>
+        {{ field.label_tag }}<br>
+        {{ field }}
+        {% if field.help_text %}
+          <span>{{ field.help_text }}</span>
+        {% endif %}
+        {% for error in field.errors %}
+          <p>{{ error }}</p>
+        {% endfor %}
+      </p>
+    {% endfor %}
+    <button type="submit">Отправить</button>
+  </form>
+{% endblock %}
