orders history added

--- a/shop/djangoShop/templates/djangoShop/cart.html
+++ b/shop/djangoShop/templates/djangoShop/cart.html
@@ -28,8 +28,9 @@
     </div>
     <div class="col">
         <b>Общая сума</b> {{full_price}}
-    </div>
+    </div><br>
     <a href="{% url 'cleancart-url' %}" class="btn btn-primary">Очистить корзину</a>
+    <br>
     <a href="{% url 'order-form-url' %}" class="btn btn-primary">Оформить заказ</a>
   </div>
 
