--- a/shop/djangoShop/templates/djangoShop/index.html
+++ b/shop/djangoShop/templates/djangoShop/index.html
@@ -19,6 +19,7 @@
         <a class="navbar-brand" href="{% url 'cart-url'%}">Корзина</a>
         {% if user.is_authenticated %}
 
+        <a class="navbar-brand" href="{% url 'account-url'%}">Личный кабинет</a>
         <a class="navbar-brand" href="{% url 'logout-url'%}">Выход</a>
         {% else %}
 
